--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -26,8 +26,7 @@
       <div class="card-body">
         <h5 class="card-title">Pack anniversaire enfant</h5>
         <p class="card-text">
-          Des formules clefs en main à une fête plus personnalisée, chez vous ou dans un autre lieu, tout est possible.
-Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi... 
+         Des formules clefs en main à une fête plus personnalisée, chez vous ou dans un autre lieu, tout est possible. Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi notre sélection...
         </p> 		
 
 <p>
@@ -40,8 +39,8 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 </p>
 <div class="collapse" id="collapseExample">
   <div class="card m-2 p-3 text-justify">
-    notre sélection d’activités. Parmi les nombreuses activités que nous avons sélectionnées auprès de professionnels, nous trouverons ensemble le thème et le programme de rêve pour son anniversaire.
-	   <br>Prix : A partir de 300 €. Pack disponible pour 5 et 10 personnes.</div>
+   ...d’activités. Parmi les nombreuses activités que nous avons sélectionnées auprès de professionnels, nous trouverons ensemble le thème et le programme de rêve pour son anniversaire.
+	   <br>Prix : A partir de 150€. Pack disponible pour 5 et 10 personnes.</div>
 </div>
 								
       </div>
@@ -70,8 +69,8 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 </p>
 <div class="collapse" id="collapseExample2">
   <div class="card m-2 p-3 text-justify">
-   vous accompagne dans le choix du lieu (à domicile, dans un restaurant ou dans une salle), la durée (sur un week-end, une soirée), et de la thématique, etc. Nous nous occupons de vos réservations, de l’installation et de l’envoi des invitations si vous le souhaitez.
-       <br>  Prix : Nous consulter. Pack disponible pour 10 et 15 personnes.</div>
+  ...vous accompagne dans le choix du lieu (à domicile, dans un restaurant ou dans une salle) et de la thématique, etc. Nous nous occupons de vos réservations, de l’installation et de l’envoi des invitations si vous le souhaitez.
+       <br>  Prix : A partir de 300€. Pack disponible pour 10 et 15 personnes.</div>
 </div>
 
 
@@ -88,7 +87,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
       <div class="card-body">
         <h5 class="card-title">Pack soirées karaoké</h5>
         <p class="card-text">
-        Les soirées les plus réussies sont souvent les plus simples, celles dans lesquelles on peut chanter et danser, avec une programmation musicale que tout le monde connait, et qui rappelle à tous de bons souvenirs... 
+        Les soirées les plus réussies sont souvent les plus simples. Des chansons que tout le monde connait, qui rappellent à tous de bons souvenirs, sur lesquelles chanter et danser. Une animation Karaoké pour...
 			</p>
 								
         </p><p>
@@ -101,10 +100,8 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 </p>
 <div class="collapse" id="collapseExample3">
   <div class="card m-2 p-3 text-justify">
-  D’ailleurs, souvent les chansons les plus populaires sont le meilleur moyen de permettre à chacun de se lâcher comme il le faut.
-	 Une animation Karaoké pour vos soirées privées avec plus de 44 000 titres disponibles, un book de sélection rapide personnalisable, 4 micros sans fil, une sonorisation professionnelle. 
-  Bref, un matériel professionnel de qualité, adapté aux soirées privées. 
-  <br>Prix : à partir de 300€. Pack disponible pour 5 et 10 personnes.</div>
+ ...vos soirées privées avec plus de 44 000 titres, une sélection personnalisable, micros sans fil, une sonorisation professionnelle. Bref, un matériel professionnel de qualité, adapté aux soirées privées.
+  <br>Prix : à partir de 200€. Pack disponible pour 5 et 10 personnes.</div>
 </div>
       </div>
     </div>
@@ -119,9 +116,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
       <div class="card-body">
         <h5 class="card-title">Pack soirées dansantes</h5>
         <p class="card-text">
-          Vous souhaitez plutôt une soirée classique autour d’un cocktail au rythme d’un rock endiablé ou une soirée à thème qui transforme vos invités en acteurs de l’évènement grâce à une activité collective ou atypique.
-
-        </p><p>
+        Vous souhaitez plutôt une soirée classique autour d’un cocktail au rythme d’un rock endiablé ou une soirée à thème qui transforme vos invités en acteurs de l’évènement grâce à une activité collective ou...<p>
   <a class="btn btn-info shadow m-4" href="{{ path('verif_dispo')}}">
     Réserver
   </a>
@@ -131,8 +126,8 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 </p>
 <div class="collapse" id="collapseExample4">
   <div class="card m-2 p-3 text-justify">
-  Lieu, traiteur, ambiance musicale, service de sécurité, etc. Nous prenons en charge l’ensemble des prestations (réservation, gestion, coordination, …).
-<br>Prix : Nous consulter. Pack disponible pour 15 et 25 personnes.</div>
+  ...atypique. Lieu, traiteur, ambiance musicale, service de sécurité, etc. Nous prenons en charge l’ensemble des prestations (réservation, gestion, coordination, …).
+  <br>Prix : A partir de 500€. Pack disponible pour 15 et 25 personnes.</div>
 </div>
       </div>
     </div>
@@ -155,18 +150,18 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     <!--Grid row-->
     <div class="row">
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
-        <img src={{asset('/images/imagesUpload/img-1.jpg')}} class="img-fluid z-depth-1-half" alt="1">
+      <div class="col-lg-4 col-md-12 mb-4">
+        <img src={{asset('/images/imagesUpload/img-1.jpg')}} class="img-fluid z-depth-1" alt="1">
       </div>
       <!--Grid column-->
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 col-xs-4 mb-4">
+      <div class="col-lg-4 col-md-6 mb-4">
         <img src={{asset('/images/imagesUpload/img-2.jpg')}}  class="img-fluid z-depth-1-half" alt="2">
       </div>
       <!--Grid column-->
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
-        <img src={{asset('/images/imagesUpload/img-3.jpg')}}  class="img-fluid z-depth-2-half" alt="3">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src={{asset('/images/imagesUpload/img-3.jpg')}}  class="img-fluid z-depth-2" alt="3">
       </div>
       <!--Grid column-->
     </div>
@@ -174,39 +169,23 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     <!--Grid row-->
     <div class="row">
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
-        <img src={{asset('/images/imagesUpload/img-4.jpg')}}  class="img-fluid z-depth-3-half" alt="4">
+      <div class="col-lg-4 col-md-12 mb-4">
+        <img src={{asset('/images/imagesUpload/img-4.jpg')}}  class="img-fluid z-depth-3" alt="4">
       </div>
       <!--Grid column-->
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
-        <img src={{asset('/images/imagesUpload/img-5.jpg')}}  class="img-fluid z-depth-4-half" alt="5">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src={{asset('/images/imagesUpload/img-5.jpg')}}  class="img-fluid z-depth-4" alt="5">
       </div>
       <!--Grid column-->
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
-        <img src={{asset('/images/imagesUpload/img-6.jpg')}}  class="img-fluid z-depth-5-half" alt="6">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src={{asset('/images/imagesUpload/img-1.jpg')}}  class="img-fluid z-depth-5" alt="6">
       </div>
       <!--Grid column-->
     </div>
     <!--Grid row-->
-<div class="row">
-      <!--Grid column-->
-      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
-        <img src={{asset('/images/imagesUpload/img-1.jpg')}} class="img-fluid z-depth-1-half" alt="7">
-      </div>
-      <!--Grid column-->
-      <!--Grid column-->
-      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
-        <img src={{asset('/images/imagesUpload/img-2.jpg')}}  class="img-fluid z-depth-1-half" alt="8">
-      </div>
-      <!--Grid column-->
-      <!--Grid column-->
-      <div class="col-lg-4 col-md-6 col-xs-4 mb-4">
-        <img src={{asset('/images/imagesUpload/img-3.jpg')}}  class="img-fluid z-depth-2-half" alt="9">
-      </div>
-      <!--Grid column-->
-    </div>
+
 	
   </section>
 
@@ -214,11 +193,8 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 </div>
 
 
-		
-
-
 	<!-- AVIS -->
-	<div class="container">
+	<div class="container-fluid">
 		<div>
 			<h2 class="text-center" id="avis">Avis</h2>
 		</div>
@@ -300,6 +276,7 @@ Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à
 	
 	</div>
 
+		
 
 {% endblock %}
 
