--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,11 +5,6 @@
    
 }
 
-body {
-
-    margin-top: 5vh;
-    
-}
 
 #prestations, #galerie, #avis, #contact {
 
@@ -27,8 +22,8 @@ body {
 
 #btn-back-to-top {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 50px;
+    right: 50px;
     display: none;
     background-color: #FFBA08;
   }
@@ -69,3 +64,58 @@ color: #004d40;
     background-color: #ffba08;
     color: white;
 }
+
+.burger {
+
+        background: url('../../images/arrow-down.png')center;
+        margin-left: 45%;
+        padding: 1%;
+        width: auto;
+   }
+/* La police et le design du Pseudo utilisateur */
+
+a{
+    font-size: 20px;
+  
+}
+
+@media screen and (min-width: 410px)and (max-width: 1000px) {
+
+    .navbar {
+        position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-flow: row wrap-reverse;
+                flex-flow: row wrap-reverse;
+        width: 100%;
+        padding: 25px;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -ms-flex-line-pack: justify;
+            align-content: space-between;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        
+    }
+    #media {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient:vertical;
+        -webkit-box-direction:normal;
+            -ms-flex-direction:row;
+                flex-direction:row;
+
+        margin-left: 10%;
+        margin-top: 50px;
+        min-height: 100px;
+
+    }
+
+}
+
