--- a/templates/backoffice.html.twig
+++ b/templates/backoffice.html.twig
@@ -9,24 +9,22 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     {% endblock %}
-
    
 </head>
-
-
 <body>
 <div class="row">
 <div style=" height: 100vh" class="col-md-2 vertical-nav pl-3" id="sidebar">
       <nav class="ml-3" style="background-color: #4b1348">
            <h3 class="text-center p-5 mt-2" style="color:#ffff">Back-Office</h3>
         <ul class="nav flex-column pt-3 pb-5">
+         <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark" href="{{ path('backoffice') }}">Accueil</a></li>
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark" href="{{ path('gestion_clients') }}">Clients</a></li>
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark"  href="{{ path('gestion_reservations') }}">Réservations</a></li>
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark" href="{{ path('gestion_packs') }}">Packs</a></li>
           
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark " href="#">Contact</a></li>
             <li class="nav-item btn btn-light m-3">
-                <a class="nav-link text-dark" href="{{ path('home')}} ">Accueil</a>
+                <a class="nav-link text-dark" href="{{ path('home')}} ">Fêtes un voeu</a>
             </li>
         </ul>
     </nav>
