--- a/templates/laurence/gestion_clients.html.twig
+++ b/templates/laurence/gestion_clients.html.twig
@@ -19,7 +19,7 @@
 
     </div>
     <table class="table table-striped">
-        <thead class="thead-dark">
+        <thead class="thead-light">
         <tr>
             <th scope="col">#</th>
             <th scope="col">Nom</th>
