--- a/templates/laurence/gestion_packs.html.twig
+++ b/templates/laurence/gestion_packs.html.twig
@@ -22,7 +22,7 @@
         </div>
     </div>
     <table class="table table-striped">
-        <thead class="thead-dark">
+        <thead class="thead-light">
         <tr>
             <th scope="col">#</th>
             <th scope="col">Nom</th>
