--- a/templates/laurence/modif_pack.html.twig
+++ b/templates/laurence/modif_pack.html.twig
@@ -4,7 +4,7 @@
     <div class="container">
 
 
-        <h1 class="text-center mb-5 p-4" style="background-color: #eddcf9">Ajout Pack</h1>
+        <h1 class="text-center mb-5 p-4" style="background-color: #eddcf9">Modification Pack</h1>
 
 
         {% for message in app.flashes('success') %}
@@ -26,7 +26,7 @@
         {{ form_row(formModifPack.image3File) }}
 
 
-        <button class="btn btn-outline-primary mb-5" type="submit">Ajouter</button>
+        <button class="btn btn-outline-primary mb-5" type="submit">Modifier</button>
 
 
 
