--- a/templates/pagePaiement.html.twig
+++ b/templates/pagePaiement.html.twig
@@ -57,9 +57,7 @@
         <input name="crypto" type="text">
 
 
-
-
-            <button class="btn btn-info mt-4 mb-4" type="submit">Payer</button>
+            <a href="{{ path('remerciement')}}" class="btn btn-info mt-4 mb-4" >Payer</a>
 
         </form>
         </div>
