page remerciement fin

--- a/templates/remerciement.html.twig
+++ b/templates/remerciement.html.twig
@@ -1,9 +1,13 @@
 {% extends 'modeleConnexion.html.twig' %}
 
 {% block body %}
+ <div class="container m-5 ">
 
-    <p>Merci pour votre réservation, à bientôt</p>
+    <p class="text-center text-danger">Merci pour votre réservation, à bientôt</p>
 
+
+
+  </div>
 
 {% endblock %}
 
