page remerciement fin

--- a/templates/laurence/detail_pack.html.twig
+++ b/templates/laurence/detail_pack.html.twig
@@ -1,18 +1,18 @@
 {% extends 'modeleConnexion.html.twig' %}
 
 {% block body %}
+<p>test</p>
+{#    <h1>Détail du pack N° {{ pack.id }}</h1>#}
+{#    <div class=" card text-center w-50 mx-auto m-3">#}
 
-    <h1>Détail du pack N° {{ pack.id }}</h1>
-    <div class=" card text-center w-50 mx-auto m-3">
+{#        <div class="card-img-top mt-3">#}
+{#            <img src="{{ asset('images/imagesUpload/') }}{{ pack.image1 }}" height="200" width="200" alt="{{ pack.nom }}" >#}
+{#        </div>#}
+{#        <div class="card-body">#}
+{#            <div><h4 class="card-title">{{ pack.nom }}</h4></div>#}
+{#            <div>  {{ pack.prix}}</div>#}
+{#            <div> {{ pack.description1 }}</div>#}
+{#        </div>#}
 
-        <div class="card-img-top mt-3">
-            <img src="{{ asset('images/imagesUpload/') }}{{ pack.image1 }}" height="200" width="200" alt="{{ pack.nom }}" >
-        </div>
-        <div class="card-body">
-            <div><h4 class="card-title">{{ pack.nom }}</h4></div>
-            <div>  {{ pack.prix}}</div>
-            <div> {{ pack.description1 }}</div>
-        </div>
-
-    </div>
+{#    </div>#}
 {% endblock %}
