--- a/templates/laurence/backoffice.html.twig
+++ b/templates/laurence/backoffice.html.twig
@@ -59,7 +59,7 @@
 
 </div>
 
-    <a href="{{ path('affiche_packs') }}">packs</a>
+    {# <a href="{{ path('affiche_packs') }}">packs</a> #}
 
 {% endblock %}
 
