--- a/templates/remerciement.html.twig
+++ b/templates/remerciement.html.twig
@@ -1,10 +1,11 @@
 {% extends 'modeleConnexion.html.twig' %}
 
 {% block body %}
- <div class="container m-5 ">
+ <div class="container m-5">
 
-    <p class="text-center text-danger">Merci pour votre réservation, à bientôt</p>
-
+ <p class="text-center text-info m-5">Merci de votre confiance.</p>
+ <p class="text-center text-info m-5">Votre commande est bien enregistrée, un de nos conseillers prendra contact avec vous très bientôt.</p>
+ <p class="text-center text-info m-5">Au plaisir de vous revoir.</p>
 
 
   </div>
