--- a/templates/backoffice.html.twig
+++ b/templates/backoffice.html.twig
@@ -22,7 +22,7 @@
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark"  href="{{ path('gestion_reservations') }}">Réservations</a></li>
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark" href="{{ path('gestion_packs') }}">Packs</a></li>
           
-            <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark " href="#">Contact</a></li>
+            <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark " href="{{ path('send_form') }}">Contact</a></li>
             <li class="nav-item btn btn-light m-3">
                 <a class="nav-link text-dark" href="{{ path('home')}} ">Fêtes un voeu</a>
             </li>
