--- a/templates/email/mail.html.twig
+++ b/templates/email/mail.html.twig
@@ -38,8 +38,10 @@
                         <label for="form_need">Spécifiez l'objet de votre mail *</label>
                         <select id="form_need" name="need" class="form-control" required="required" data-error="Spécifiez l'objet de votre mail">
                             <option value=""></option>
-                            <option value="Devis">Devis</option>
-                            <option value="Informations">Informations</option>
+                            <option value="Devis">Demande de devis</option>
+                            <option value="Informations">Informations diverses</option>
+                                <option value="Suggestions">Vous avez des suggestions à nous apporter ?</option>
+                             <option value="Remerciements">Vous avez envie de nous remercier ?</option>
                             <option value="Autre">Autre</option>
                         </select>
                         <div class="help-block with-errors"></div>
