--- a/templates/remerciement.html.twig
+++ b/templates/remerciement.html.twig
@@ -1,11 +1,11 @@
 {% extends 'modeleConnexion.html.twig' %}
 
 {% block body %}
- <div class="container m-5">
+ <div class="container p-5 mt-5 text-center" style="background-color: #FFBA08">
 
- <p class="text-center text-info m-5">Merci de votre confiance.</p>
- <p class="text-center text-info m-5">Votre commande est bien enregistrée, un de nos conseillers prendra contact avec vous très bientôt.</p>
- <p class="text-center text-info m-5">Au plaisir de vous revoir.</p>
+ <p class="text-uppercase text-white m-2">Merci de votre confiance.</p>
+ <p class="text-center-capitalize text-white m-2">Votre commande est bien enregistrée, l'un de nos conseillers prendra contact avec vous très bientôt.</p>
+ <p class="text-center-capitalize text-white m-2">Au plaisir de vous revoir.</p>
 
 
   </div>
