--- a/templates/laurence/ajout_pack.html.twig
+++ b/templates/laurence/ajout_pack.html.twig
@@ -1,6 +1,12 @@
 {% extends 'backoffice.html.twig' %}
 
 {% block body %}
+
+  <!-- Bootstrap core CSS -->
+      <link href={{asset('assets/css/bootstrap.min.css')}} rel="stylesheet">
+      <link href={{asset('assets/css/style.css')}} rel="stylesheet">
+      <link href={{asset('assets/css/bootstrap.bundle.js')}} rel="stylesheet">
+      
 <div class="container-fluid">
 
 
