--- a/templates/laurence/gestion_packs.html.twig
+++ b/templates/laurence/gestion_packs.html.twig
@@ -2,6 +2,11 @@
 
 {% block body %}
 
+  <!-- Bootstrap core CSS -->
+      <link href={{asset('assets/css/bootstrap.min.css')}} rel="stylesheet">
+      <link href={{asset('assets/css/style.css')}} rel="stylesheet">
+      <link href={{asset('assets/css/bootstrap.bundle.js')}} rel="stylesheet">
+
 <div class="container-fluid">
     <h1 class="text-center mt-2 mb-2 p-4 text-white" style="background-color: #4b1348">Gestion des articles</h1>
     {% for message in app.flashes('success') %}
