--- a/templates/pagePaiement.html.twig
+++ b/templates/pagePaiement.html.twig
@@ -7,19 +7,19 @@
         <h1 class="text-center mt-5 mb-5 p-4" style="background-color: #EDDCF9">Paiement</h1>
 
         {% for message in app.flashes('success') %}
-            <div class="col-md-6 bg-info p-4 rounded mx-auto text-center text-white mb-3">
+            <div class="bg-info p-3 rounded mx-auto text-center text-white m-4">
                 {{ message }}
             </div>
         {% endfor %}
         {% for message in app.flashes('danger') %}
-            <div class="col-md-6 bg-danger p-4 rounded mx-auto text-center text-white mb-3">
+            <div class="bg-danger p-4 rounded mx-auto text-center text-white m-3">
                 {{ message }}
             </div>
         {% endfor %}
         <div class="row justify-content-end">
         </div>
         <table class="table table-striped">
-            <thead class="thead-dark">
+            <thead class="thead-light">
             <tr>
                 <th scope="col">Nom</th>
                 <th scope="col">Prénom</th>
