--- a/templates/prisca/mailer.html.twig
+++ b/templates/prisca/mailer.html.twig
@@ -84,11 +84,11 @@
 </head>
 <body style="margin:0; padding:0;" bgcolor="#F0F0F0" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- 100% background wrapper (grey background) -->
-<table border="0" width="100%" height="100%" cellpadding="0" cellspacing="0" bgcolor="#F0F0F0">
+<table border="0" width="40%" height="40%" cellpadding="0" cellspacing="0" bgcolor="#F0F0F0">
     <tr>
         <td align="center" valign="top" bgcolor="#F0F0F0" style="background-color: #F0F0F0;">
             <br>
-            <img src="{{ cid }}" alt="">
+            <img src="{{ cid }}" alt="logo">
             <!-- 600px container (white background) -->
             <table border="0" width="600" cellpadding="0" cellspacing="0" class="container" style="width:600px;max-width:600px">
                 <tr>
