--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="Le meilleur du service évènementiel familial">
       <meta name="author" content="Fêtes un voeu, au service de vos festivités">
+      <link rel="icon" href="/images/favicon/favicon.ico" />
       <title>FETES UN VOEU</title>
 
       <!-- Bootstrap core CSS -->
