--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -140,7 +140,7 @@
 </header>
 
    {% for message in app.flashes('success') %}
-        <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
+        <div class="col-md-3 bg-info p-4 rounded mx-auto text-center text-white mt-3 mb-3">
           {{ message }}
         </div>
       {% endfor %}
