--- a/templates/laurence/gestion_packs.html.twig
+++ b/templates/laurence/gestion_packs.html.twig
@@ -2,11 +2,6 @@
 
 {% block body %}
 
-  <!-- Bootstrap core CSS -->
-      <link href={{asset('assets/css/bootstrap.min.css')}} rel="stylesheet">
-      <link href={{asset('assets/css/style.css')}} rel="stylesheet">
-      <link href={{asset('assets/css/bootstrap.bundle.js')}} rel="stylesheet">
-
 <div class="container-fluid">
     <h1 class="text-center mt-2 mb-2 p-4 text-white" style="background-color: #4b1348">Gestion des articles</h1>
     {% for message in app.flashes('success') %}
@@ -22,11 +17,11 @@
 
 
     <div class="row justify-content-start">
-        <div class="col-md-3">
-            <a class="btn btn-info my-2" href="{{ path('ajout_pack') }}">Ajouter un nouveau pack</a>
+        <div class="col-md-2 ml-3 rounded" style="background-color: #ffba08">
+            <a class="btn text-white ml-4 my-2"   href="{{ path('ajout_pack') }}">Ajouter un nouveau pack</a>
         </div>
     </div>
-    <table class="table table-striped">
+    <table class="table table-striped m-2">
         <thead class="thead-light">
         <tr>
             <th scope="col">#</th>
