--- a/templates/laurence/resa_clients.html.twig
+++ b/templates/laurence/resa_clients.html.twig
@@ -6,8 +6,11 @@
             {{ message }}
         </div>
     {% endfor %}
+    <div class="container-fluid">
+      <h1 class="text-center mt-2 mb-2 p-4 text-white" style="background-color: #4b1348">Détail des réservations</h1>
+  
 {#<h1>Réservations effectuées par {{ user.prenom }} {{ user.nom }}</h1>#}
-    <table class="table table-striped w-50">
+    <table class="table table-striped text-center w-50 mt-4">
         <thead class="thead-light">
         <tr>
             <th scope="col">#</th>
