--- a/templates/back/resa_clients.html.twig
+++ b/templates/back/resa_clients.html.twig
@@ -1,4 +1,4 @@
-{% extends 'backoffice.html.twig' %}
+{% extends 'modelBackoffice.html.twig' %}
 
 {% block body %}
     {% for message in app.flashes('success') %}
