--- a/templates/email/mailer.html.twig
+++ b/templates/email/mailer.html.twig
@@ -82,27 +82,32 @@
         }
     </style>
 </head>
-<body style="margin:0; padding:0;" bgcolor="#F0F0F0" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<body class="" style="margin:0; padding:0;" bgcolor="#F0F0F0" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- 100% background wrapper (grey background) -->
-<table border="0" width="40%" height="40%" cellpadding="0" cellspacing="0" bgcolor="#F0F0F0">
+<table border="0" width="5vw" height="5vh" cellpadding="0" cellspacing="0" bgcolor="#F0F0F0">
     <tr>
-        <td align="center" valign="top" bgcolor="#F0F0F0" style="background-color: #F0F0F0;">
+        <td align="left" valign="top" bgcolor="#F0F0F0" style="background-color: #F0F0F0;">
             <br>
-            <img src="{{ cid }}" alt="logo">
+            <img class="mb-5" src="{{ cid }}" alt="logo">
             <!-- 600px container (white background) -->
             <table border="0" width="600" cellpadding="0" cellspacing="0" class="container" style="width:600px;max-width:600px">
                 <tr>
-                    <td class="container-padding header" align="left" style="font-family:Helvetica, Arial, sans-serif;font-size:24px;font-weight:bold;padding-bottom:12px;color:#DF4726;padding-left:24px;padding-right:24px">
-                        {{ motif }}
+                    <td class="container-padding header mt-5" align="left" style="font-family:Helvetica, Arial, sans-serif;font-size:24px;font-weight:bold;padding-bottom:12px;color:#4B1348;padding-left:24px;padding-right:24px">
+                      Objet du message :  {{ motif }}
                     </td>
                 </tr>
                 <tr>
                     <td class="container-padding content" align="left" style="padding-left:24px;padding-right:24px;padding-top:12px;padding-bottom:12px;background-color:#ffffff">
                         <br>
-                        <div class="title" style="font-family:Helvetica, Arial, sans-serif;font-size:18px;font-weight:600;color:#374550">
-                            {{ nom }} {{ prenom }} {{ email }}</div>
+                        <div class="title" style="font-family:Helvetica, Arial, sans-serif;font-size:18px;font-weight:400;color:#374550"> Nom du contact :
+                            {{ nom }} </div>
+                            <div class="title" style="font-family:Helvetica, Arial, sans-serif;font-size:18px;font-weight:400;color:#374550"> Prénom du contact :
+                            {{ prenom }} </div>
+                            <br>
+                            <div class="title" style="font-family:Helvetica, Arial, sans-serif;font-size:15px;font-weight:400;color:#374550"> Adresse e-mail du contact :
+                           {{ email }}</div>
                         <br>
-                        <div class="body-text" style="font-family:Helvetica, Arial, sans-serif;font-size:14px;line-height:20px;text-align:left;color:#333333">
+                        <div class="body-text" style="font-family:Helvetica, Arial, sans-serif;font-size:14px;line-height:20px;text-align:left;color:#333333">Message :
                         {{ message }}
                             <br><br>
                         </div>
