--- a/templates/back/backoffice.html.twig
+++ b/templates/back/backoffice.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="container-fluid m-1">
 <h2 class="text-center mt-2 mb-5 p-4 text-white" style="background-color: #4b1348"> Back-office</h2>
- <div class="card-header font-weight-bold text-center mt-5 mb-3 p-4">
+ <div class="card-header font-weight text-center mt-5 mb-3 p-4">
          <p class="mb-4">Les prochaines réservations</p>
         
     <table class="table table-striped w-100">
