--- a/templates/back/gestion_packs.html.twig
+++ b/templates/back/gestion_packs.html.twig
@@ -17,8 +17,8 @@
 
 
     <div class="row justify-content-start">
-        <div class="col-md-2 ml-3 rounded" style="background-color: #ffba08">
-            <a class="btn text-white ml-4 my-2"   href="{{ path('ajout_pack') }}">Ajouter un nouveau pack</a>
+        <div class="text-center m-3 rounded" style="background-color: #ffba08">
+            <a class="btn text-white my-2"   href="{{ path('ajout_pack') }}">Ajouter un pack</a>
         </div>
     </div>
     <table class="table table-striped m-2">
