--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,10 +34,11 @@
             <a class="mt-4 ml-4" href="/">
               <img src={{asset('images/imagesUpload/logo/logo_fetes_un_voeu.png')}} alt="Logo fêtes un voeu" width="125">
             </a>
-         
+         <div class="container-fluid">
        
-            <a class="navbar-brand mt-5 ml-5" href="/">Fêtes un voeu<br>...au service de vos festivités
+            <a class="mt-5 ml-5" href="/">Fêtes un voeu<br>...au service de vos festivités
             </a>
+            </div>
           </div>
 
               <!-- Section: Social media -->
