--- a/templates/modeleConnexion.html.twig
+++ b/templates/modeleConnexion.html.twig
@@ -48,7 +48,7 @@
             </a>
          
        
-            <a class="navbar-brand mt-5 ml-5" href="/">Fêtes un voeu<br>...au service de vos festivités
+            <a class="mt-5 ml-5" href="/">Fêtes un voeu<br>...au service de vos festivités
             </a>
           </div>
 
