--- a/templates/back/ajout_pack.html.twig
+++ b/templates/back/ajout_pack.html.twig
@@ -26,7 +26,7 @@
     {{ form_row(formPack.image3) }}
 
    
-    <button class="btn text-white my-2" style="background-color: #ffba08" type="submit">Ajouter</button>
+    <div><button class="btn text-white m-2" style="background-color: #ffba08" type="submit">Ajouter</button></div>
 
     {{ form_end(formPack) }}
     </div>
