--- a/templates/back/gestion_reservations.html.twig
+++ b/templates/back/gestion_reservations.html.twig
@@ -13,8 +13,8 @@
         </div>
     {% endfor %}
     <div class="row justify-content-start">
-        <div class="col-md-2 ml-3 rounded" style="background-color: #ffba08">
-            <a class="btn text-white ml-1 my-2 " href="{{ path('verif_dispo') }}">Ajouter une nouvelle réservation</a>
+        <div class="text-center m-3 rounded" style="background-color: #ffba08">
+            <a class="btn text-white my-2 " href="{{ path('verif_dispo') }}">Ajouter une réservation</a>
         </div>
     </div>
     <table class="table table-striped m-2">
