--- a/templates/modeleConnexion.html.twig
+++ b/templates/modeleConnexion.html.twig
@@ -46,10 +46,10 @@
             <a class="mt-4 ml-4" href="/">
               <img src={{asset('images/imagesUpload/logo/logo_fetes_un_voeu.png')}} alt="Logo fêtes un voeu" width="125">
             </a>
-         
-       
-            <a class="mt-5 ml-5" href="/">Fêtes un voeu<br>...au service de vos festivités
-            </a>
+            <div class="container-fluid" >
+         <div class="d-flex my-auto ml-5" style="font-family:Original Surfer; padding-top:4%; font-size:1.4em; color:#4B1348;">
+               Fêtes un voeu <br> ...au service de vos festivités
+            </div></div>
           </div>
 
               <!-- Section: Social media -->
