--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -266,8 +266,8 @@
 
         <!-- Copyright -->
 
-        <div class="text-center p-4" style="background-color: #eddcf9">© 2021 Fêtes un voeu -
-            Protection des données
+        <div class="text-center p-4" style="background-color: #eddcf9">© 2021 Fêtes un voeu -<a href="{{ path('rgpd')}}">
+                Protection des données</a>
         </div>
       </footer>
 
