--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -264,7 +264,7 @@
 
         </main>
 
-        <!-- Copyright -->
+        <!-- Copyright et RGPD -->
 
         <div class="text-center p-4" style="background-color: #eddcf9">© 2021 Fêtes un voeu -<a href="{{ path('rgpd')}}">
                 Protection des données</a>
